admin panel UI and product add operation done.

--- a/public/stylesheets/sign_up_sign_in.css
+++ b/public/stylesheets/sign_up_sign_in.css
@@ -5,7 +5,9 @@
   .bgsignup {
     background: url(/images/login/login.jpg);
   }
-  
+  .adbglogin{
+    background: url(/images/login/login.jpg);
+  }
   .input-group {
     display: flex;
     flex-direction: column;
