--- a/views/admin_sign_in.ejs
+++ b/views/admin_sign_in.ejs
@@ -13,33 +13,9 @@
 </head>
 
 <body>
-  <nav class="navBar px-[5%]">
-    <div class="flex items-center justify-between my-4">
-      <div class="relative cursor-pointer bg-transparent z-10 text-white">
-        <div
-          class="relative flex flex-col justify-center z-10 pb-1 pr-3 font-noto font-semibold text-2xl border-b-4 border-r-4 rounded-xl">
-          <h1>Anime</h1>
-          <h1 class="text-secondary">. Aura</h1>
-        </div>
-
-        <div class="blob absolute top-0 left-0">
-          <div
-            class="absolute blur-xl top-0 -left-10 w-12 h-12 mix-blend-multiply bg-teal-500 opacity-80 rounded-full animate-blob delay-0">
-          </div>
-          <div
-            class="absolute blur-xl top-0 left-20 w-12 h-12 mix-blend-multiply bg-gray-200 opacity-80 rounded-full animate-blob delay-5000">
-          </div>
-          <div
-            class="absolute blur-xl top-10 left-5 w-12 h-12 mix-blend-multiply bg-secondary opacity-90 rounded-full animate-blob delay-2000">
-          </div>
-        </div>
-      </div>
 
 
-    </div>
-  </nav>
-
-  <main class="bglogin h-[calc(100vh-104px)] px-2 sm:px-[5%]">
+  <main class="adbglogin h-[calc(10vh-104px)] px-5 sm:px-[5%]">
     <div class="flex w-full h-full justify-center items-center">
       <!-- center box -->
       <div class="w-full flex items-center sm:max-w-[800px] h-[500px] bg-blackAplha600 rounded-2xl overflow-hidden">
