add to cart operation  and product description page done

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -40,7 +40,7 @@
           <div class="link">
             <a class="" href="/">Home</a>
             <a class="active" href="/about">About</a>
-            <a class="" href="user/sign-up">
+            <a class="" href="/profile">
               <ion-icon name="person-outline" />
             </a>
             <a class="" href="/product/cart">
