--- a/views/admin_sign_in.ejs
+++ b/views/admin_sign_in.ejs
@@ -40,7 +40,7 @@
             </h1>
             <br>
 
-            <form action="/admin/create-session" method="post">
+            <form action="/admin/create-sessionAdmin" method="post">
               <div class="input-group">
                 <label>Username</label>
                 <input type="email" placeholder="Enter Email" name="email" required />
