--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -42,7 +42,7 @@
           <div class="link">
             <a class="" href="/">Home</a>
             <a class="" href="/about">About</a>
-            <a class="active" href="/user/sign-up">
+            <a class="active" href="/profile">
               <ion-icon name="person-outline" />
             </a>
             <a class="" href="/product/cart">
@@ -116,8 +116,6 @@
               </div>
             </div>
           </div>
-          <!-- login-box-end -->
-          <div></div>
         </div>
       </div>
     </main>
