--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -2,14 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>
-        <%= title %>
-      </title>
-      <link rel="icon" type="image/x-icon" href="/images/home/logo.png">
-      <link rel="stylesheet" href="/stylesheets/sign_up_sign_in.css" />
-      <link rel="stylesheet" href="/stylesheets/main.css" />
-      <link rel="stylesheet" href="/stylesheets/tailwind.css" />
-      <link rel="stylesheet" href="/stylesheets/cart.css" />
+    <title><%= title %></title>
+    <link rel="icon" type="image/x-icon" href="/images/home/logo.png" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css"
+  />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+    <link rel="stylesheet" href="/stylesheets/sign_up_sign_in.css" />
+    <link rel="stylesheet" href="/stylesheets/main.css" />
+    <link rel="stylesheet" href="/stylesheets/tailwind.css" />
+    <link rel="stylesheet" href="/stylesheets/cart.css" />
   </head>
 
   <body>
@@ -59,77 +62,60 @@
         Cart
       </h1>
 
-      <div
-        id="wrapper"
-        class="flex flex-col gap-10 xl:flex-row xl:gap-0 justify-between mt-10"
-      >
-        <div
-          id="cart-wrapper"
-          class="left-cart-section flex flex-col gap-10 h-[600px] overflow-y-scroll no-scrollbar flex-grow bg-zinc-950"
-        >
-          <div class="card flex items-center">
-            <img
-              class="h-36 object-cover rounded-xl"
-              src="/images/product/m10.webp"
-              alt="product"
-            />
+      <div id="wrapper" class="flex flex-wrap flex-col gap-10 xl:flex-row xl:gap-14 justify-between mt-10">
+        <% cartinfo.forEach(item => { %>
+          <div id="cart-wrapper"class="left-cart-section flex flex-col gap-10 h-[600px] overflow-y-scroll no-scrollbar flex-grow bg-zinc-950">
 
-            <div
-              class="flex flex-col gap-3 md:flex-row md:gap-0 w-full px-4 md:px-6 justify-between"
-            >
+            <div class="card flex items-center">
+            <img class="h-36 object-cover rounded-xl"
+                 src="<%=item.product.image%>"
+                 alt="product"/>
+
+                 <div
+              class="flex flex-col gap-3 md:flex-row md:gap-14 w-full px-4 md:px-6 justify-between"
+              >
               <div class="flex flex-col gap-2 font-poppins font-medium">
                 <h1 class="max-w-[400px] md:text-xl">
-                  MENS DARK GREEN Solid Lightweight Winter Jacket
+                  <%= item.product.title%>
                 </h1>
-                <h2 class="text-zinc-500">Oversized T-Shirts</h2>
+                <h2 class="text-zinc-500"><%= item.product.category%></h2>
 
                 <!-- Quantity -->
                 <div
-                  class="flex items-center gap-4 text-zinc-500 cursor-pointer"
+                class="flex items-center gap-4 text-zinc-500 cursor-pointer"
                 >
-                  <h1 class="font-comfortaa text-gray-200">Quantity :</h1>
-                  <button
-                    onclick="onQuantityChange('dec','m1')"
-                    class="border-[1px] w-8 h-8 rounded-md border-zinc-600"
-                  >
-                    <ion-icon name="remove-outline" />
-                  </button>
-                  <span class="text-gray-100 font-semibold text-xl">1</span>
-                  <button
-                    class="border-[1px] w-8 h-8 rounded-md border-zinc-600"
-                  >
-                    <ion-icon name="add-outline" />
-                  </button>
-                </div>
+                <h1 class="font-comfortaa text-gray-200">Quantity : <%= item.quantity%></h1>
               </div>
-
-              <span class="text-xl md:text-2xl font-poppins font-medium">
+            </div>
+            
+            <span class="text-xl md:text-2xl font-poppins font-medium">
                 Rs.
-                <b id="total" class="text-2xl md:text-3xl text-lime-400">799</b>
+                <b id="total" class="text-2xl md:text-3xl text-lime-400"><%= item.product.price%></b>
               </span>
             </div>
             <div
-              class="text-sm h-full rounded-r-md hover:bg-red-600 cursor-pointer"
+            class="text-sm h-full rounded-r-md hover:bg-red-600 cursor-pointer"
             >
-              <ion-icon name="close-outline" />
-            </div>
+            <a href="/product/remove/<%= item._id%>"><ion-icon name="close-outline" /></a>
           </div>
         </div>
+      </div>
+      <%})%>
 
         <div
           id="summary"
           class="right-cart-section mb-10 flex flex-col gap-4 w-full max-w-[400px] xl:pl-[5%]"
-        >
+          >
           <h1
             class="w-fit font-extrabold text-3xl text-transparent bg-clip-text bg-gradient-to-r from-pink-400 to-indigo-400"
           >
-            Summary
+          Summary
           </h1>
 
           <div class="font-poppins font-medium text-zinc-400">
             <div class="my-2 flex items-center justify-between text-2xl">
               <span>SubTotal:</span>
-              <span>Rs. <b id="subTotal">0</b></span>
+              <span>Rs. <b id="subTotal"><%=subTotal%></b></span>
             </div>
             <div class="my-2 flex items-center justify-between text-2xl">
               <span>Shipping fee:</span>
@@ -144,20 +130,39 @@
               <span>Total</span>
               <span
                 class="text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-indigo-400"
-                >Rs. <b id="total">4000</b></span
+                >Rs. <b id="total"><%=subTotal + shippingFee%></b></span
               >
             </div>
             <button
               class="w-40 mt-10 bg-indigo-700 hover:bg-indigo-800 py-3 text-white text-xl rounded-full"
             >
-              Checkout &#10132;
+             <a href="/product/checkout"> Checkout &#10132; </a>
             </button>
           </div>
         </div>
       </div>
     </main>
+    <script>
+      <% if(flash.success && flash.success.length > 0){%>
+                  new Noty({
+                  theme:'sunset',
+                  text: '<h3><%= flash.success%></h3>',
+                  type:'success',
+                  layout:'topRight',
+                  timeout:3000
+              }).show();
+              <% } %>
 
-    <script src="/javascripts/cart.js"></script>
+              <% if(flash.error && flash.error.length > 0){%>
+                new Noty({
+                  theme:'sunset',
+                  text: '<%= flash.error%>',
+                  type:'error',
+                  layout:'topRight',
+                  timeout:3000
+                }).show();
+              <% } %>
+    </script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
