--- a/views/admin_panel.ejs
+++ b/views/admin_panel.ejs
@@ -49,7 +49,7 @@
         <!-- Sidebar Start -->
         <div class="sidebar pe-4 pb-3">
             <nav class="navbar bg-secondary navbar-dark">
-                <a href="index.html" class="navbar-brand mx-4 mb-3">
+                <a href="#" class="navbar-brand mx-4 mb-3">
                     <h3 class="text-primary"><i class="fa fa-user-edit me-2"></i>Anime Aura</h3>
                 </a>
                 <div class="d-flex align-items-center ms-4 mb-4">
@@ -177,8 +177,8 @@
                             &copy; <a href="#">Anime Aura</a>, All Right Reserved. 
                         </div>
                         <div class="col-12 col-sm-6 text-center text-sm-end">
-                            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                            Designed By <a href="https://htmlcodex.com">Sahil Sayyad</a>
+                            
+                            Designed By <a href="#">Sahil Sayyad</a>
                         </div>
                     </div>
                 </div>
