--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,121 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title><%= title %></title>
-    <link rel="icon" type="image/x-icon" href="/images/home/logo.png" />
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css"
-  />
+
+<head>
+  <meta charset="UTF-8" />
+  <title>
+    <%= title %>
+  </title>
+  <link rel="icon" type="image/x-icon" href="/images/home/logo.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
-    <link rel="stylesheet" href="/stylesheets/sign_up_sign_in.css" />
-    <link rel="stylesheet" href="/stylesheets/main.css" />
-    <link rel="stylesheet" href="/stylesheets/tailwind.css" />
-    <link rel="stylesheet" href="/stylesheets/cart.css" />
-  </head>
+  <link rel="stylesheet" href="/stylesheets/sign_up_sign_in.css" />
+  <link rel="stylesheet" href="/stylesheets/main.css" />
+  <link rel="stylesheet" href="/stylesheets/tailwind.css" />
+  <link rel="stylesheet" href="/stylesheets/cart.css" />
+</head>
 
-  <body>
-    <!-- navbar  -->
-    <nav class="navBar px-[5%]">
-      <div class="flex items-center justify-between my-4">
-        <div class="relative cursor-pointer bg-transparent z-10 text-white">
-          <div
-            class="relative flex flex-col justify-center z-10 pb-1 pr-3 font-noto font-semibold text-2xl border-b-4 border-r-4 rounded-xl"
-          >
-            <h1>Anime</h1>
-            <h1 class="text-secondary">. Aura</h1>
-          </div>
-
-          <div class="blob absolute top-0 left-0">
-            <div
-              class="absolute blur-xl top-0 -left-10 w-12 h-12 mix-blend-multiply bg-teal-500 opacity-80 rounded-full animate-blob delay-0"
-            ></div>
-            <div
-              class="absolute blur-xl top-0 left-20 w-12 h-12 mix-blend-multiply bg-gray-200 opacity-80 rounded-full animate-blob delay-5000"
-            ></div>
-            <div
-              class="absolute blur-xl top-10 left-5 w-12 h-12 mix-blend-multiply bg-secondary opacity-90 rounded-full animate-blob delay-2000"
-            ></div>
-          </div>
+<body>
+  <!-- navbar  -->
+  <nav class="navBar px-[5%]">
+    <div class="flex items-center justify-between my-4">
+      <div class="relative cursor-pointer bg-transparent z-10 text-white">
+        <div
+          class="relative flex flex-col justify-center z-10 pb-1 pr-3 font-noto font-semibold text-2xl border-b-4 border-r-4 rounded-xl">
+          <h1>Anime</h1>
+          <h1 class="text-secondary">. Aura</h1>
         </div>
 
-        <div class="navLink text-dimWhite">
-          <div class="link">
-            <a class="" href="/">Home</a>
-            <a class="" href="/about">About</a>
-            <a class="" href="/user/sign-up">
-              <ion-icon name="person-outline" />
-            </a>
-            <a class="active" href="/product/cart">
-              <ion-icon name="bag-outline" />
-            </a>
+        <div class="blob absolute top-0 left-0">
+          <div
+            class="absolute blur-xl top-0 -left-10 w-12 h-12 mix-blend-multiply bg-teal-500 opacity-80 rounded-full animate-blob delay-0">
+          </div>
+          <div
+            class="absolute blur-xl top-0 left-20 w-12 h-12 mix-blend-multiply bg-gray-200 opacity-80 rounded-full animate-blob delay-5000">
+          </div>
+          <div
+            class="absolute blur-xl top-10 left-5 w-12 h-12 mix-blend-multiply bg-secondary opacity-90 rounded-full animate-blob delay-2000">
           </div>
         </div>
       </div>
-    </nav>
 
-    <main class="px-[5%] mt-24 font-comfortaa text-white max-w-[1700px]">
-      <h1
-        class="w-fit text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-indigo-400"
-      >
-        Cart
-      </h1>
+      <div class="navLink text-dimWhite">
+        <div class="link">
+          <a class="" href="/">Home</a>
+          <a class="" href="/about">About</a>
+          <a class="" href="/profile">
+            <ion-icon name="person-outline" />
+          </a>
+          <a class="active" href="/product/cart">
+            <ion-icon name="bag-outline" />
+          </a>
+        </div>
+      </div>
+    </div>
+  </nav>
 
+  <main class="px-[5%] mt-24 font-comfortaa text-white max-w-[1700px]">
+    <h1
+      class="w-fit text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-indigo-400">
+      Cart
+    </h1>
+
+    <%if(cartinfo.length> 0) { %>
       <div id="wrapper" class="flex flex-wrap flex-col gap-10 xl:flex-row xl:gap-14 justify-between mt-10">
-        <% cartinfo.forEach(item => { %>
-          <div id="cart-wrapper"class="left-cart-section flex flex-col gap-10 h-[600px] overflow-y-scroll no-scrollbar flex-grow bg-zinc-950">
+        <div id="cart-wrapper"
+          class="left-cart-section flex flex-col gap-10 h-[600px] overflow-y-scroll no-scrollbar flex-grow bg-zinc-950">
+          <% cartinfo.forEach(item=> { %>
 
             <div class="card flex items-center">
-            <img class="h-36 object-cover rounded-xl"
-                 src="<%=item.product.image%>"
-                 alt="product"/>
+              <img class="h-36 object-cover rounded-xl" src="<%=item.product.image%>" alt="product" />
 
-                 <div
-              class="flex flex-col gap-3 md:flex-row md:gap-14 w-full px-4 md:px-6 justify-between"
-              >
-              <div class="flex flex-col gap-2 font-poppins font-medium">
-                <h1 class="max-w-[400px] md:text-xl">
-                  <%= item.product.title%>
-                </h1>
-                <h2 class="text-zinc-500"><%= item.product.category%></h2>
+              <div class="flex flex-col gap-3 md:flex-row md:gap-14 w-full px-4 md:px-6 justify-between">
+                <div class="flex flex-col gap-2 font-poppins font-medium">
+                  <h1 class="max-w-[400px] md:text-xl">
+                    <%= item.product.title%>
+                  </h1>
+                  <h2 class="text-zinc-500">
+                    <%= item.product.category%>
+                  </h2>
 
-                <!-- Quantity -->
-                <div
-                class="flex items-center gap-4 text-zinc-500 cursor-pointer"
-                >
-                <h1 class="font-comfortaa text-gray-200">Quantity : <%= item.quantity%></h1>
+                  <!-- Quantity -->
+                  <div class="flex items-center gap-4 text-zinc-500 cursor-pointer">
+                    <h1 class="font-comfortaa text-gray-200">Quantity : <%= item.quantity%>
+                    </h1>
+                  </div>
+                </div>
+
+                <span class="text-xl md:text-2xl font-poppins font-medium">
+                  Rs.
+                  <b id="total" class="text-2xl md:text-3xl text-lime-400">
+                    <%= item.product.price%>
+                  </b>
+                </span>
+              </div>
+              <div class="text-sm h-full rounded-r-md hover:bg-red-600 cursor-pointer">
+                <a href="/product/remove/<%= item._id%>"><ion-icon name="close-outline" /></a>
               </div>
             </div>
-            
-            <span class="text-xl md:text-2xl font-poppins font-medium">
-                Rs.
-                <b id="total" class="text-2xl md:text-3xl text-lime-400"><%= item.product.price%></b>
-              </span>
-            </div>
-            <div
-            class="text-sm h-full rounded-r-md hover:bg-red-600 cursor-pointer"
-            >
-            <a href="/product/remove/<%= item._id%>"><ion-icon name="close-outline" /></a>
-          </div>
+            <%})%>
         </div>
-      </div>
-      <%})%>
 
-        <div
-          id="summary"
-          class="right-cart-section mb-10 flex flex-col gap-4 w-full max-w-[400px] xl:pl-[5%]"
-          >
+        <div id="summary" class="right-cart-section mb-10 flex flex-col gap-4 w-full max-w-[400px] xl:pl-[5%]">
           <h1
-            class="w-fit font-extrabold text-3xl text-transparent bg-clip-text bg-gradient-to-r from-pink-400 to-indigo-400"
-          >
-          Summary
+            class="w-fit font-extrabold text-3xl text-transparent bg-clip-text bg-gradient-to-r from-pink-400 to-indigo-400">
+            Summary
           </h1>
 
           <div class="font-poppins font-medium text-zinc-400">
             <div class="my-2 flex items-center justify-between text-2xl">
               <span>SubTotal:</span>
-              <span>Rs. <b id="subTotal"><%=subTotal%></b></span>
+              <span>Rs. <b id="subTotal">
+                  <%=subTotal%>
+                </b></span>
             </div>
             <div class="my-2 flex items-center justify-between text-2xl">
               <span>Shipping fee:</span>
@@ -128,48 +123,54 @@
             </div>
             <div class="my-2 flex items-center justify-between text-3xl">
               <span>Total</span>
-              <span
-                class="text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-indigo-400"
-                >Rs. <b id="total"><%=subTotal + shippingFee%></b></span
-              >
+              <span class="text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-indigo-400">Rs. <b
+                  id="total">
+                  <%=subTotal + shippingFee%>
+                </b></span>
             </div>
-            <button
-              class="w-40 mt-10 bg-indigo-700 hover:bg-indigo-800 py-3 text-white text-xl rounded-full"
-            >
-             <a href="/product/checkout"> Checkout &#10132; </a>
+            <button class="w-40 mt-10 bg-indigo-700 hover:bg-indigo-800 py-3 text-white text-xl rounded-full">
+              <a href="/product/checkout"> Checkout &#10132; </a>
             </button>
           </div>
         </div>
       </div>
-    </main>
-    <script>
-      <% if(flash.success && flash.success.length > 0){%>
-                  new Noty({
-                  theme:'sunset',
-                  text: '<h3><%= flash.success%></h3>',
-                  type:'success',
-                  layout:'topRight',
-                  timeout:3000
-              }).show();
+  </main>
+  <%}else{%>
+
+    <section class="poppins-medium flex flex-col space-y-4 w-full lg:w-6/12 bg-zinc-900 p-6 md:p-10 rounded-xl">
+
+
+      <div>
+        <h1 class="text-5xl text-emerald-300 mt-4 mb-1">Your Cart is Empty</h1>
+        <hr class="w-[100%] mb-4" />
+
+      </div>
+
+    </section>
+    <%}%>
+      <script>
+      <% if (flash.success && flash.success.length > 0) {%>
+          new Noty({
+            theme: 'sunset',
+            text: '<h3><%= flash.success%></h3>',
+            type: 'success',
+            layout: 'topRight',
+            timeout: 3000
+          }).show();
               <% } %>
 
-              <% if(flash.error && flash.error.length > 0){%>
-                new Noty({
-                  theme:'sunset',
-                  text: '<%= flash.error%>',
-                  type:'error',
-                  layout:'topRight',
-                  timeout:3000
-                }).show();
+              <% if (flash.error && flash.error.length > 0) {%>
+          new Noty({
+            theme: 'sunset',
+            text: '<%= flash.error%>',
+            type: 'error',
+            layout: 'topRight',
+            timeout: 3000
+          }).show();
               <% } %>
-    </script>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
-  </body>
+      </script>
+      <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+      <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+</body>
+
 </html>
