--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -42,7 +42,7 @@
                 <div class="link">
                     <a class="" href="/">Home</a>
                     <a class="" href="/about">About</a>
-                    <a class="" href="/user/sign-up">
+                    <a class="" href="/profile">
                         <ion-icon name="person-outline" />
                     </a>
                     <a class="" href="/product/cart">
