--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -61,26 +61,26 @@
               Shipping Address
             </h1>
 
-            <form action="/" method="post">
+            <form action="/product/order-placed" method="post">
               <div class="input-group">
                 <label>Address</label>
                 <input type="text" placeholder="Enter Address" name="address" required />
               </div>
               <div class="input-group">
                 <label>Apartment, Building, etc.</label>
-                <input type="email" placeholder="Enter Apartment, Building" name="apartment" required />
+                <input type="text" placeholder="Enter Apartment, Building" name="apartment" required />
               </div>
               <div class="input-group">
                 <label>City</label>
-                <input type="email" placeholder="Enter City" name="city" required />
+                <input type="text" placeholder="Enter City" name="city" required />
               </div>
               <div class="input-group">
                 <label>Country</label>
-                <input type="email" placeholder="Enter Country" name="country" required />
+                <input type="text" placeholder="Enter Country" name="country" required />
               </div>
               <div class="input-group">
                 <label>State</label>
-                <input type="email" placeholder="Enter State" name="state" required />
+                <input type="text" placeholder="Enter State" name="state" required />
               </div>
               <div class="input-group">
                 <label>Pin Code</label>
@@ -94,6 +94,9 @@
                 Place Order &#10132;
               </button>
             </form>
+            <% productIds.forEach(id=> {%>
+                 <h1><%=id%></h1>
+            <%})%>
           </div>
         </div>
       </div>
